--- a/hdfs/build.gradle
+++ b/hdfs/build.gradle
@@ -1,10 +1,12 @@
 version '1.3-SNAPSHOT'
 
+apply plugin: 'application'
+
 dependencies {
     compileOnly libraries.hadoop_common
     compileOnly libraries.hadoop_hdfs
 
-    testCompile libraries.corefan_spark_testing
+//    testCompile libraries.corefan_spark_testing
 
     testCompile libraries.hadoop_common,
                 libraries.hadoop_hdfs,
